# researh-agent

./: .gitignore  README.md  main.py  pyproject.toml
agent/: graph.py  interface.py  llm.py  prompts.py  state.py
agent/nodes/: search_agent_node.py  summarize_agent_node.py  supervisor_node.py
agent/tools/: search_tool.py  summarizer.py  supabase_memory.py
api/: app.py
api/routes/: chat.py  papers.py
config/: settings.py
frontend/static/css/: style.css
frontend/static/js/: chat.js
frontend/templates/: index.html
supabase/: schema.sql
tests/: agent_graph_verification.py  setup_verification.py  supabase_memory_verfication.py
